--- a/source/work/index.html.haml
+++ b/source/work/index.html.haml
@@ -4,7 +4,8 @@
 %section
   .company-example
     .company-example__description
-      %h4 Soma Water Website Redesign
+      %h4 
+        %a{href:"https://www.drinksoma.com/", target: "_blank"} Soma Water Website Redesign
       %p.date.company-example__service-used ENGINEERING
       %p 
         I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
@@ -16,11 +17,7 @@
         to bring this project to life.
         / %a.read-more{href:"#"} Read More &rsaquo;
       %p
-        %a.read-more{href:"https://www.drinksoma.com/", target: "_blank"} VISIT SITE &rsaquo;
-        
-    .company-example__image.omega
-      %a{href:"https://www.drinksoma.com/", target: "_blank"}
-        = image_tag "work/soma-pitcher.png", alt: "Soma Water Website"
+        %a.read-more{href:"https://www.drinksoma.com/", target: "_blank"} VISIT SITE &rsaquo;&rsaquo;
     .company-example__testimony
       %blockquote
         %p Pavan has been our go-to guy to help with our engineering efforts at drinksoma.com. We came to him for help with a huge redesign of our e-commerce website. He was able to put a new face on our website and vastly improve the capabilities of our platform -- leading to many more sales and happier customers! He has a great ability to take our business problems and solve them with his engineering expertise. We look forward to continuing to work with him!
@@ -28,19 +25,15 @@
 
 
 %section
-  .company-example
+  .company-example.odd
     .company-example__description
-      %h4 Interactive Protein Pathways
+      %h4
+        %a{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"} Interactive Protein Pathways
       %p.date.company-example__service-used DESIGN & DATA VISUALIZATION
       %p
         Cell Signal Technology wanted to build a visualization that provided information on their product catalog, as well as inform the viewer about protein pathways available in the cell. They hired Captains of Industry, who brought me on to build the data viz. I worked closely with design througout and built the entire visualization.
-        / %a.read-more{href:"#"} Read More &rsaquo;
         %p
-          %a.read-more{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"} VISIT SITE &rsaquo;
-        
-    .company-example__image.omega
-      %a{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"}
-        = image_tag "work/ipv-pathways.png", alt: "Visualizing Protein Pathways"
+          %a.read-more{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"} VISIT SITE &rsaquo;&rsaquo;
     
     .company-example__testimony
       %blockquote.no-margin-bottom
@@ -51,17 +44,13 @@
 %section
   .company-example.no-margin-bottom
     .company-example__description
-      %h4 Hummings
+      %h4
+        %a{href:"https://www.hellohummings.com/", target: "_blank"} Hummings
       %p.date.company-example__service-used DESIGN, ENGINEERING
       %p
         Hummings is a mobile-first personal finance companion app. They came to me with early stage wireframes, and I guided them through UX revisions and product development. Once designs were finalized, I put together a small engineering team to build out the entire app.
-        / %a.read-more{href:"#"} Read More &rsaquo;
       %p
-        %a.read-more{href:"https://www.hellohummings.com/", target: "_blank"} VISIT SITE &rsaquo;
-        
-    .company-example__image.omega
-      %a{href:"https://www.hellohummings.com/", target: "_blank"}
-        = image_tag "work/hummings.png", alt: "Hummings"
+        %a.read-more{href:"https://www.hellohummings.com/", target: "_blank"} VISIT SITE &rsaquo;&rsaquo;
     .company-example__testimony
       %blockquote
         %p We started working with Pavan at Gray Bike for our MVP app (www.hellohummings.com) at the wireframe stage. Pavan quickly grasped the vision of our product and provided a great deal of insights to shape our UX, product architecture, and the engineering milestones. He also came up with really smart solutions to leverage existing tools & frameworks to optimize the custom coding work.
