--- a/source/stylesheets/graybike/base/_footer.scss
+++ b/source/stylesheets/graybike/base/_footer.scss
@@ -1,4 +1,6 @@
 footer {
+  width: 100%;
+  bottom: 0;
   background: darken($blue-d2,20%);
   color: $blue-b2;
   padding: padding-blocks(2) padding-blocks(1);
