--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -5,7 +5,7 @@
     / Always force latest IE rendering engine or request Chrome Frame
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{name:"description",content:data.site_info.description}
-    %meta{name:"keywords",content:"software development, software engineering, engineering, design, consultancy, software consultancy, freelance, software developers, rails, d3, data visualization, data viz"}
+    %meta{name:"keywords",content:"software development, software engineering, engineering, design, consultancy, software consultancy, consulting, freelance, software developers, rails, d3, data visualization, data viz"}
     %meta{name:"viewport", content:"width=device-width, initial-scale=1.0" }
     %meta{name:"google-site-verification", content:"mGFqkZIpRsu-KTICkZB_Lk453ig5zwNKhB2WrqWtqTg"}
 
