--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -63,6 +63,11 @@ header {
 
     span.active {
       font-weight: 700;
+
+      &:after {
+        opacity: 1;
+        @include transform(translateY(0px));
+      }
     }
     &:last-child {
       padding-right: 0;
@@ -123,7 +128,7 @@ nav a span:after {
   top: 100%;
   left: 0;
   width: 100%;
-  height: 4px;
+  height: 2px;
   background: $action-color;
   content: '';
   opacity: 0;
