--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,7 +5,7 @@
   %section
     .about
       .bio
-        %p.tagline My name is Pavan Trikutam. I'm a designer & developer living in San Francisco. Gray Bike is what I call my consulting business because it's a heck of a lot easier for people to spell than my name.
+        %p.tagline My name is Pavan Trikutam. I'm a developer & designer living in San Francisco. Gray Bike is what I call my consulting business because it's a heck of a lot easier for people to spell than my name.
 
         %p Since 2009, I've worked as a technical partner for organizations of all sizes. Usually this involves a combination of design, code, and lots of collaboration. I love being involved in a project from the design phase, but I'm happy to jump in at any stage.
 
