--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -16,6 +16,8 @@
           %a{href: 'mailto:hello@graybike.co'} send me an email
           or call me directly at
           %a{href: 'tel:4153263397'} 415-326-3397.
+          You can also 
+          %a{href: 'https://twitter.com/ptrikutam'} find me on twitter.
 
       .services-clients
         .services
