first draft of git workflow document

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -18,6 +18,7 @@
 @import "graybike/base/utilities";
 @import "graybike/base/nav";
 @import "graybike/base/footer";
+@import "graybike/base/syntax";
 
 // Components
 @import "graybike/components/buttons";
