--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -40,7 +40,8 @@ $pastel-brown: #BDCC97;
 
 
 $dark-gray: #555;
-$light-gray: #ddd;
+$medium-gray: #A1A0A0;
+$light-gray: #DDD;
 
 // Font Colors
 $base-font-color: $dark-gray;
