--- a/source/stylesheets/graybike/pages/_blog.scss
+++ b/source/stylesheets/graybike/pages/_blog.scss
@@ -2,7 +2,24 @@
   .articles, article.post {
     @include text-width();
   }
+
   .articles article {
-    margin-bottom: padding-blocks(5);
+    margin-bottom: padding-blocks(3);
+  }
+
+  article.post {
+    
+    // Need Moar Typographic Hierarchy
+    h4 {
+      color: $medium-gray;
+      font-weight: 300;
+      text-transform: uppercase;
+    }
+
+    pre {
+      margin-top: 0;
+      margin-bottom: 1.5em;
+      overflow-x: scroll;
+    }
   }
 }
