--- a/source/partials/_cta.html.haml
+++ b/source/partials/_cta.html.haml
@@ -1,5 +1,7 @@
-%section.cta
-  %p.text-center Interested in working together?
-  .cta__contact.text-center
-    %a.cta__button{href:'mailto:hello@graybike.co', alt: "Get in touch"}
-      .cta__cta-text GET IN TOUCH
+.cta
+  %section
+    .cta__text.type-system-slab.text-center
+      %h2 Let's make something awesome together.
+    .cta__buttons
+      %a{class: "button text-center", href:'mailto:hello@graybike.co', alt: "Get in touch"}
+        .button__text GET IN TOUCH
