--- a/source/stylesheets/graybike/base/_footer.scss
+++ b/source/stylesheets/graybike/base/_footer.scss
@@ -4,7 +4,7 @@ footer {
   background: darken($blue-d2,20%);
   color: $blue-b2;
   padding: padding-blocks(2) padding-blocks(1);
-  margin-top: padding-blocks(2);
+  // margin-top: padding-blocks(2);
   ul {
     list-style: none;
     padding-left: 0;
