--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -10,6 +10,7 @@
 
 // Helpers
 @import "graybike/helpers/mixins";
+@import "graybike/helpers/typographic_mixins";
 @import "graybike/helpers/functions";
 
 // Base
@@ -24,6 +25,7 @@
 @import "graybike/components/buttons";
 @import "graybike/components/cta";
 @import "graybike/misc/fade-up";
+@import "graybike/components/projects";
 
 // Pages
 @import "graybike/pages/landing";
