--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -17,6 +17,7 @@ header {
   div h2, nav {
     display: inline-block;
     vertical-align: middle;
+
   }
 
   > div {
@@ -40,6 +41,7 @@ header {
     font-family: $sans-serif;
     color: $blue-d2;
     font-weight: 600;
+    border-bottom: 0;
     // &:hover {
     //   color: $blue-b2;
     //   cursor: pointer;
@@ -60,6 +62,7 @@ header {
     font-weight: 400;
     text-transform: uppercase;
     white-space: nowrap;
+    border-bottom: 0;
 
     span.active {
       font-weight: 700;
