--- a/source/stylesheets/graybike/base/_typography.scss
+++ b/source/stylesheets/graybike/base/_typography.scss
@@ -47,7 +47,7 @@
     border-bottom: 1px solid;
     display: inline-block;
     font-family: $sans-serif;
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-weight: 600;
     margin-bottom: 2em;
     padding: 0.1em 0;
@@ -56,14 +56,7 @@
   }
 
   h1 {
-    font-family: $serif;
-    font-size: 1.6em;
-    font-weight: $base-font-weight;
-    margin-bottom: 0.6em;
-
-    @include media($medium-screen) {
-      font-size: 2.4em;
-    }
+    @include h1-font-style();
   }
 
   h2 {
@@ -76,6 +69,10 @@
     @include media($medium-screen) {
       font-size: 1.3em;
     }
+  }
+
+  h1 a {
+      border-bottom: 0;
   }
 
   pre {
