add dots background

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,4 +1,5 @@
-%section.text-center.hero-text
+%section.text-center.hero-text.dots-background
+  %svg
   %h1.fade-up= data.site_info.description
 
 .main-content.type-system-slab
@@ -6,7 +7,7 @@
     .about
       .bio
         %p
-          We're a small collective of designers and developers helping our clients build and improve their software. All projects are led by our founder, 
+          We're a small collective of designers and developers helping our clients build and improve their software. All projects are led by our founder,
           = succeed '.' do
             %a{href:'https://twitter.com/ptrikutam'} Pavan Trikutam
         %p
@@ -31,7 +32,7 @@
       .services-clients
         .services
           %p.subheading What we can do for you
-          %ul 
+          %ul
             %li Plan your next project
             %li Design & build a digital product
             %li Create a data visualization
@@ -46,7 +47,7 @@
             %li Cell Signaling Technology
             %li Captains of Industry
             %li Hummings
-            
+
 
   / %section.details.type-system-slab
   /   .details__column
