--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -26,6 +26,7 @@
 @import "graybike/components/cta";
 @import "graybike/misc/fade-up";
 @import "graybike/components/projects";
+@import "graybike/components/dots_background";
 
 // Pages
 @import "graybike/pages/landing";
