updated dot background

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,7 @@
-%section.text-center.hero-text.dots-background
-  %svg
-  %h1.fade-up= data.site_info.description
+.dots-background
+  %section.text-center.hero-text
+    %svg
+    %h1.fade-in= data.site_info.description
 
 .main-content.type-system-slab
   %section
