add background to dot text

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,8 @@
 .dots-background
   %section.text-center.hero-text
     %svg
-    %h1.fade-in= data.site_info.description
+    %h1.fade-in
+      .text-span= data.site_info.description
 
 .main-content.type-system-slab
   %section
