--- a/source/stylesheets/graybike/components/_dots_background.scss
+++ b/source/stylesheets/graybike/components/_dots_background.scss
@@ -7,6 +7,11 @@
     text-transform: uppercase;
     font-weight: 600;
     text-shadow: 0 1px $light-gray;
+
+    .text-span {
+      display: inline;
+      background: $blue-b2;
+    }
   }
 
   svg {
