--- a/source/work/index.html.haml
+++ b/source/work/index.html.haml
@@ -4,7 +4,8 @@ layout: layout
 .dots-background
   %section.text-center.index
     %svg
-    %h1.fade-in Selected Projects
+    %h1.fade-in
+      .text-span Selected Projects
   / %h2.text-center.work-title.desktop
   /   / %div We work with companies of all sizes to
   /   / %div build digital products for the web.
