--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,8 +1,18 @@
 .dots-background
-  %section.text-center.hero-text
+  %section.hero-text
     %svg
-    %h1.fade-in
-      .text-span= data.site_info.description
+    .spacing
+      %h1.fade-in
+        .light-bg.no-padding-bottom
+          %span.standout Gray Bike
+          is a creative
+        %div
+          .light-bg.no-padding-top
+            technology studio
+      %h4.subtitle.fade-in
+        .light-bg.no-padding-top
+          San Francisco, CA
+
 
 .main-content.type-system-slab
   %section
