--- a/source/work/index.html.haml
+++ b/source/work/index.html.haml
@@ -2,10 +2,11 @@
 layout: layout
 ---
 .dots-background
-  %section.text-center.index
+  %section.index
     %svg
-    %h1.fade-in
-      .text-span Selected Projects
+    .spacing
+      %h1.fade-in
+        .light-bg Selected Projects
   / %h2.text-center.work-title.desktop
   /   / %div We work with companies of all sizes to
   /   / %div build digital products for the web.
