--- a/source/stylesheets/graybike/base/_utilities.scss
+++ b/source/stylesheets/graybike/base/_utilities.scss
@@ -17,3 +17,12 @@
 .no-margin-bottom {
   margin-bottom: 0 !important;
 }
+
+.no-padding-top {
+  padding-top: 0 !important;
+}
+
+
+.no-padding-bottom {
+  padding-bottom: 0 !important;
+}
