--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -1,9 +1,12 @@
 // http://tympanus.net/codrops/2013/07/14/justified-and-vertically-centered-header-elements/
 header {
+  @include outer-container;
   text-align: justify;
   letter-spacing: 1px;
   height: $navbar-height;
-  padding: 1em 2.5%;
+
+  padding-left: padding-blocks(1);
+  padding-right: padding-blocks(1);
   font-family: $sans-serif;
 
   // http://code.jelmerdemaat.nl/2012/perfectly-justified-css-grid-technique-using-inline-block/
@@ -12,7 +15,7 @@ header {
     display: inline-block;
     width: 100%;
   }
-  
+
   > div,
   div h2, nav {
     display: inline-block;
@@ -26,12 +29,12 @@ header {
     text-align: left;
      &::before {
       content: '';
-      display: inline-block;  
+      display: inline-block;
       vertical-align: middle;
       height: 100%;
     }
   }
-  
+
   h2 {
     margin: 0;
   }
@@ -49,7 +52,7 @@ header {
     // &::before {
     //   // content: '';
     //   display: inline-block;
-    //   vertical-align: middle;  
+    //   vertical-align: middle;
     //   height: 100%;
     // }
     span.dg {
