remove dots on work page

--- a/source/work/index.html.haml
+++ b/source/work/index.html.haml
@@ -1,9 +1,8 @@
 ---
 layout: layout
 ---
-.dots-background
+.work-title
   %section.index
-    %svg
     .spacing
       %h1.fade-in
         .light-bg Selected Projects
