--- a/source/stylesheets/graybike/pages/_work.scss
+++ b/source/stylesheets/graybike/pages/_work.scss
@@ -1,7 +1,12 @@
 .work {
   .work-title {
-    @include hero-text-styles();
+    // @include hero-text-styles();
+    padding-top: padding-blocks(4);
+    padding-bottom: padding-blocks(4);
 
+    h1 {
+      margin-top: 0;
+    }
     display: block;
     @include media($tablet) {
       display: none;
@@ -35,10 +40,10 @@
         text-align: center;
         font-size: 0.8em;
         color: $medium-gray;
-        text-transform: none;  
+        text-transform: none;
         font-style: italic;
       }
-      
+
     }
     img, video {
       width: 100%;
