add mobile styles for landing page

--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -15,6 +15,11 @@
     @include hero-text-styles();
     margin-top: padding-blocks(1);
     margin-bottom: 0;
+
+    @include media($mobile) {
+      margin-top: padding-blocks(1);
+      margin-bottom: 0;
+    }
     font-weight: 400;
     letter-spacing: 1px;
 
