--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,10 +5,10 @@
       %h1.fade-in
         .light-bg.no-padding-bottom
           %span.standout Gray Bike
-          is a creative
+          is your ad-hoc
         %div
           .light-bg.no-padding-top
-            technology studio
+            engineering team
       %h4.subtitle.fade-in
         .light-bg.no-padding-top
           San Francisco, CA
