--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,7 +8,7 @@
           is your ad-hoc
         %div
           .light-bg.no-padding-top
-            engineering team
+            digital product team
       %h4.subtitle.fade-in
         .light-bg.no-padding-top
           San Francisco, CA
