improved & updated copy for Soma Water

--- a/source/stylesheets/graybike/base/_utilities.scss
+++ b/source/stylesheets/graybike/base/_utilities.scss
@@ -26,3 +26,9 @@
 .no-padding-bottom {
   padding-bottom: 0 !important;
 }
+
+p.callout {
+  padding: 20px;
+  background-color: $blue-d2;
+    color: $white;
+}
