initial import of green commons writeup

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -73,5 +73,6 @@ $client-colors: (
   soma: #00c2ff,
   wootric: #1B4959,
   hummings: #53A6B8,
-  cst: #3e7998
+  cst: #3e7998,
+  greencommons: #53A6B8
 );
