--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -41,9 +41,9 @@ header {
   h2 a {
     height: 100%;
     font-size: 1.5em;
-    font-family: $sans-serif;
+    font-family: 'Rubik', $sans-serif;
     color: $blue-d2;
-    font-weight: 600;
+    font-weight: 500;
     border-bottom: 0;
     // &:hover {
     //   color: $blue-b2;
