Update everything to graybike.com and move things to https.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -35,7 +35,7 @@
 
         %p
           If you'd like to find out more or work with us,
-          %a{href: 'mailto:hello@graybike.co'} shoot us an email
+          %a{href: 'mailto:hello@graybike.com'} shoot us an email
           or call us directly at
           = succeed '.' do
             %a{href: 'tel:4153263397'} 415-326-3397
