--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -2,9 +2,9 @@
   %ul.text-center
     %li
       %p
-        %a{href: 'mailto:hello@graybike.co'} hello@graybike.co
+        %a{href: 'mailto:hello@graybike.com'} hello@graybike.com
     %li.divider
-      %p &#xb7;  
+      %p &#xb7;
     %li
       %p 415.326.3397
   - if data.features.colophon
