--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,7 +11,7 @@
 
     / Use title if it's in the page YAML frontmatter
     %title= "#{current_page.data.title ? current_page.data.title + " | " : ''}Gray Bike"
-    %link{href:'http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Rubik:500', rel:'stylesheet', type:'text/css'}
+    %link{href:'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Rubik:500', rel:'stylesheet', type:'text/css'}
     = stylesheet_link_tag "all"
 
 
@@ -32,5 +32,5 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-51459213-1', 'graybike.co');
+      ga('create', 'UA-51459213-1', 'graybike.com');
       ga('send', 'pageview');
